<resources>
    <string name="app_name">KK</string>
    <string name="skip">跳过</string>
    <string name="account">手机号</string>
    <string name="password">密码</string>
    <string name="login">登 入</string>
    <string name="logout">注 销</string>
    <string name="send">发送</string>
    <string name="forget_password">忘记密码？</string>
    <string name="register_user">注册新用户</string>
    <string name="back">返回</string>
    <string name="more">更多</string>
    <string name="input_username">请输入用户名</string>
    <string name="input_password">请输入密码</string>
    <string name="input_repassword">请确认密码</string>
    <string name="input_phone_number">请输入手机号</string>
    <string name="get_validation_code">获取验证码</string>
    <string name="input_validation_code">请输入验证码</string>
    <string name="register">注 册</string>
    <string name="confirm">确 定</string>
    <string name="new_password">新密码:</string>
    <string name="password_require">8-16位，至少含数字/字母/字符两种组合</string>
    <string name="new_friends">新朋友</string>
    <string name="create_group_chat">创建群聊</string>
    <string name="friends">好友</string>
    <string name="group_chat">群聊</string>
    <string name="edit_sign">编辑个性签名</string>
    <string name="add_people_or_group">加好友/群</string>
    <string name="find_people">找人:</string>
    <string name="find_group_chat">找群:</string>
    <string name="find_hint">KK号/手机号/群</string>
    <string name="phone_album">从手机相册选择</string>
    <string name="photo_shoot">拍一张</string>
    <string name="cancel">取消</string>
    <string name="nickname">昵称</string>
    <string name="sex">性别</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="birthday">生日</string>
    <string name="hometown">家乡</string>
    <string name="description">个人说明</string>
    <string name="age">年龄</string>
    <string name="country">国家</string>
    <string name="province_city">省市</string>
    <string name="China">中国</string>
    <string name="input_description">请输入个人说明</string>
    <string name="publish_sign">发布签名</string>
    <string name="input_validate_info">填写验证信息</string>
    <string name="add_friend">添加好友</string>
    <string name="album">相册</string>
    <string name="camera">拍照</string>
    <string name="file">文件</string>
    <string name="voice">语音</string>
    <string name="create">立即创建</string>
    <string name="delete_friend">删除好友</string>
    <string name="detail">详细资料</string>
    <string name="exit_team">退出群聊</string>
    <string name="dismiss_team">解散群聊</string>
    <string name="team_members">群聊成员</string>
    <string name="add_members">添加成员</string>


</resources>
