<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/tintgray">

    <include layout="@layout/common_back_title"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:background="@color/white">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/country"
                android:textSize="16sp"
                android:textColor="@color/black"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:text="@string/China"
                android:textColor="@color/black"
                android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/province_city_layout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="1dp"
            android:background="@color/white">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/province_city"
                android:textSize="16sp"
                android:textColor="@color/black"/>

        <TextView
                android:id="@+id/province_city_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:textColor="@color/black"
                android:textSize="16sp"/>
    </LinearLayout>

</LinearLayout>
