<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <include layout="@layout/common_title"/>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:background="@color/white">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:text="@string/new_friends"
                android:textSize="20sp"
                android:textColor="@color/black"/>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_alignParentRight="true">

            <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/icon_enter"/>

        </LinearLayout>


    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/create_team_layout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="2dp"
            android:background="@color/white">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:text="@string/create_group_chat"
                android:textSize="20sp"
                android:textColor="@color/black"/>

        <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerInParent="true"
                android:layout_alignParentRight="true"
                android:src="@drawable/icon_enter"/>
    </RelativeLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@color/white">
        <TextView
                android:id="@+id/address_book_friends"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:text="@string/friends"
                android:textSize="18sp"
                android:textColor="@color/titleblue"/>

        <TextView
                android:id="@+id/address_book_team"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:text="@string/group_chat"
                android:textSize="18sp"
                android:textColor="@color/gray"/>

    </LinearLayout>

    <android.support.v4.view.ViewPager
            android:id="@+id/address_book_view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"/>

</LinearLayout>
